--- a/css/selection.css
+++ b/css/selection.css
@@ -1,4 +1,3 @@
-/* https://coolors.co/26547c-ef476f-ffd166-06d6a0-fffcf9-34090f-c45a6d-62bec1 */
 :root {
     --conclusion: #26547c;
     --economy: #ef476f;
@@ -8,4 +7,19 @@
     --mainfontcolor: #34090f;
     --mainselection: #c45a6d;
     --mainhighlight: #62bec1;
+}
+
+::selection {
+    background: #fd746c;
+    color: #2c3e50;
+}
+
+::-moz-selection {
+    background: #fd746c;
+    color: #2c3e50;
+}
+
+::-webkit-selection {
+    background: #fd746c;
+    color: #2c3e50;
 }
