--- a/css/Zihan_Mei_ex5_Scrollytelling.css
+++ b/css/Zihan_Mei_ex5_Scrollytelling.css
@@ -87,6 +87,11 @@ iframe {
 
 #mapbox {
     height: 40vh;
+    border: none;
+}
+
+section#conclusion #mapbox {
+    height: 60vh !important;
 }
 
 .testcontent {
