--- a/css/1130-storyboard.css
+++ b/css/1130-storyboard.css
@@ -5,12 +5,8 @@
 :root {
     --conclusion: #26547c;
     --economy: #ef476f;
-    --transportation: #ffd166;
-    --humanresource: #06d6a0;
     --mainbg: #fffcf9;
     --mainfontcolor: #34090f;
-    --mainselection: #c45a6d;
-    --mainhighlight: #62bec1;
 }
 
 body, html {
@@ -26,7 +22,7 @@ a#backtotop {
     position: fixed;
     bottom: 40px;
     right: 40px;
-    stroke: var(--mainfontcolor);
+    stroke: var(--mainbg);
     transition: background-color .3s, opacity .5s, visibility .5s;
     opacity: 0;
     z-index: 1000;
@@ -34,7 +30,7 @@ a#backtotop {
 
 a#backtotop:hover {
     cursor: pointer;
-    stroke: var(--mainselection);
+    stroke: var(--economy);
     transition: .3s;
     /* background-color: #333; */
 }
@@ -55,7 +51,7 @@ div.scrolldown {
 }
 
 div.scrolldown:hover {
-    stroke: var(--mainselection);
+    stroke: var(--economy);
     transition: .3s;
 }
 
@@ -73,7 +69,7 @@ div.coverwords {
     width: 50%;
     left: 25%;
     top: 25vh;
-    background-color: rgba(255, 255, 255, .8);
+    background-color: rgba(255,252,249,.9);
     box-shadow: 1px 1px 4px 0px rgba(0, 0, 0, 0.05), 2px 4px 10px 0 rgba(0, 0, 0, 0.1), 0 0 10px 0 rgba(0, 0, 0, 0.2);
     backdrop-filter: blur(5px);
     padding: 30px;
@@ -110,8 +106,31 @@ section {
     height: 80%;
 }
 
+.buttons {
+    position: absolute;
+    top: 280px;
+    left: 20px;
+}
+
+button {
+    background-color: rgba(239,71,111,.5);
+    font-family: Montserrat, source-han-sans-cjk-sc, source-han-sans-cjk-ja, sans-serif;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    transition: all .3s;
+}
+
+button:hover, button.inactivebtn:hover {
+    background-color: var(--economy);
+}
+
+button.inactivebtn {
+    background-color: #aaa;
+}
+
 .frame {
-    background-color: rgba(255, 255, 255, .8);
+    background-color: rgba(255,252,249,.9);
     box-shadow: 1px 1px 4px 0px rgba(0, 0, 0, 0.05), 2px 4px 10px 0 rgba(0, 0, 0, 0.1), 0 0 10px 0 rgba(0, 0, 0, 0.2);
     backdrop-filter: blur(5px);
     padding: 10px;
@@ -212,7 +231,7 @@ h1.note {
 
 .zipcode:hover {
     z-index: 1000;
-    fill: #ef476f;
+    fill: #62bec1;
     transition: .3s;
 }
 
@@ -223,7 +242,7 @@ h1.note {
 #tooltip {
     position: absolute;
     padding: 5px;
-    background-color: white;
+    background-color: rgba(255,252,249,.9);
     border: solid gray 1px;
     z-index: 10;
     pointer-events: none;
