--- a/css/index.css
+++ b/css/index.css
@@ -71,7 +71,7 @@ div.coverwords {
     width: 50%;
     left: 25%;
     top: 25vh;
-    background-color: rgba(255, 252, 249, .9);
+    background-color: rgba(255, 252, 249, .75);
     box-shadow: 1px 1px 4px 0px rgba(0, 0, 0, 0.05), 2px 4px 10px 0 rgba(0, 0, 0, 0.1), 0 0 10px 0 rgba(0, 0, 0, 0.2);
     backdrop-filter: blur(5px);
     padding: 30px;
@@ -311,6 +311,12 @@ h1.note {
 .image5 {
     height: 60%;
     width: 60%;
+}
+
+.image6 {
+    height: 90%;
+    width: 90%;
+    margin-left: -75px;
 }
 
 #background .column2 p {
