--- a/css/index.css
+++ b/css/index.css
@@ -120,7 +120,7 @@ section#footer {
 
 .buttons {
     position: absolute;
-    top: 280px;
+    top: 360px;
     left: 20px;
 }
 
@@ -271,6 +271,14 @@ h1.note {
     border: solid gray 1px;
     z-index: 10;
     pointer-events: none;
+}
+
+.d3concchart line, .d3concchart path {
+    stroke: #34090f;
+}
+
+.d3concchart text {
+    fill: #34090f;
 }
 
 .bgcontent {
