--- a/css/article.css
+++ b/css/article.css
@@ -14,6 +14,8 @@ h1, h2, h3, p, a, ol, ul, li {
 blockquote {
     padding-left: 1rem;
     border-left: solid #888888 3px;
+    font-size: 12px;
+    font-weight: 200;
 }
 
 h1 {
