--- a/css/Zihan_Mei_ex5_Scrollytelling.css
+++ b/css/Zihan_Mei_ex5_Scrollytelling.css
@@ -71,6 +71,13 @@ div.parallax {
 }
 
 div.coverwords {
+    background-color: rgba(255, 252, 249, .7);
+    box-shadow: 1px 1px 4px 0px rgba(0, 0, 0, 0.05), 2px 4px 10px 0 rgba(0, 0, 0, 0.1), 0 0 10px 0 rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(5px);
+    padding: 10px;
+    border-radius: 20px;
+    border: 1px solid var(--mainfontcolor);
+    margin: 10px;
     position: absolute;
     width: 50%;
     left: 25%;
